--- a/LatexTFG/Apendices/01ApendiceA.tex
+++ b/LatexTFG/Apendices/01ApendiceA.tex
@@ -3,34 +3,71 @@
 %                          Apéndice 1
 %
 %---------------------------------------------------------------------
+%
+% 01AsiSeHizo.tex
+% Copyright 2009 Marco Antonio Gomez-Martin, Pedro Pablo Gomez-Martin
+%
+% This file belongs to the TeXiS manual, a LaTeX template for writting
+% Thesis and other documents. The complete last TeXiS package can
+% be obtained from http://gaia.fdi.ucm.es/projects/texis/
+%
+% Although the TeXiS template itself is distributed under the 
+% conditions of the LaTeX Project Public License
+% (http://www.latex-project.org/lppl.txt), the manual content
+% uses the CC-BY-SA license that stays that you are free:
+%
+%    - to share & to copy, distribute and transmit the work
+%    - to remix and to adapt the work
+%
+% under the following conditions:
+%
+%    - Attribution: you must attribute the work in the manner
+%      specified by the author or licensor (but not in any way that
+%      suggests that they endorse you or your use of the work).
+%    - Share Alike: if you alter, transform, or build upon this
+%      work, you may distribute the resulting work only under the
+%      same, similar or a compatible license.
+%
+% The complete license is available in
+% http://creativecommons.org/licenses/by-sa/3.0/legalcode
+%
+%---------------------------------------------------------------------
 
-\chapter{Así se hizo...}
-\label{ap1:AsiSeHizo}
+\chapter{Código}
+\label{codigo}
 
 \begin{FraseCelebre}
 \begin{Frase}
-...
+Pones tu pie en el camino y si no cuidas tus pasos, nunca sabes a donde te pueden llevar.
 \end{Frase}
 \begin{Fuente}
-...
+John Ronald Reuel Tolkien, El Señor de los Anillos
 \end{Fuente}
 \end{FraseCelebre}
 
 \begin{resumen}
-...
+Este apéndice cuenta algunos de los aspectos técnicos más importantes del proyecto.
 \end{resumen}
 
 %-------------------------------------------------------------------
-\section{Introducción}
+\section{Edición}
 %-------------------------------------------------------------------
-\label{ap1:intro}
+\label{ap1:edicion}
 
-...
+Eso era en realidad un síntoma indicativo de que en nuestro trabajo
+cotidiano utilizamos emacs para editar ficheros \LaTeX. Es cierto que
+inicialmente utilizamos otros editores creados expresamente para la
+edición de ficheros en \LaTeX, pero descubrimos emacs y ha llegado
+para quedarse.
+
+
+
+
 
 % Variable local para emacs, para  que encuentre el fichero maestro de
 % compilación y funcionen mejor algunas teclas rápidas de AucTeX
 %%%
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../Tesis.tex"
+%%% TeX-master: "../ManualTeXiS.tex"
 %%% End:
