--- a/LatexTFG/Tesis.tex
+++ b/LatexTFG/Tesis.tex
@@ -118,7 +118,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 \include{Cascaras/dedicatoria}
 
-\include{Cascaras/autorizacion}
+%\include{Cascaras/autorizacion}
 
 \include{Cascaras/agradecimientos}
 
@@ -149,7 +149,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 % Apéndices
 \appendix
-%\include{Apendices/01ApendiceA}
+\include{Apendices/01ApendiceA}
 %\include{...}
 %\include{...}
 %\include{...}
