--- a/LatexTFG/constantes.tex
+++ b/LatexTFG/constantes.tex
@@ -18,8 +18,7 @@
 %
 % Escribe el título del documento.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\def\titulo{\textsc{TeXiS}: Una plantilla de \LaTeX\
-  para Tesis y otros documentos}
+\def\titulo{Monitorización de señales biomédicas en sistemas Android}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Comando: 
