--- a/LatexTFG/Capitulos/03Capitulo3.tex
+++ b/LatexTFG/Capitulos/03Capitulo3.tex
@@ -29,7 +29,7 @@ Para la correcta funcionalidad del proyecto, ha sido necesario configurar el har
 
 Tras haber realizado la elección del tema en el que se basaría nuestro trabajo de fin de grado, así como tras la elección del director que dirigiría dicho trabajo, estabamos ansiosos de empezar lo antes posible e introducirnos en la materia. Nos pareció apasionante la idea de poder desarrollar software para dispositivos empotrados, y aun más, sabiendo que el campo con el que estaría íntimamente relacionado sería la medicina. Tras los sabios consejos que nos transmitió Joaquín sobre que placa concreta usar, de que hardware podríamos disponer para la realización del proyecto, así como el software que se nos podría facilitar, estabamos decididos a comenzar. La placa hardware sobre la que desarrollariamos finalmente se trataba de una BeagleBone Black.
 
-Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder comenzar a trabajar y sentar las bases de un proyecto mucho mayor. Este proyecto además podía funcionar correctamente con diversos chips de Texas Instruments,concretamente nosotros escogimos el chip ADS1198. Este chip generaba simulaciones de muestras de forma continua. El código proporcionado era relativamente sencillo y fácil de entender. Se trataba de un programa realizado en C capaz de leer en espacio de usuario del dispositivo (en nuestro caso la BBB). Es decir, era capaz de recibir y tratar toda la información recibida de forma continua por el chip ADS1198. Hasta aquí todo es relativamente sencillo, gracias al protocolo SPI y al programa de usuario en C era posible gestionar toda la información recibida de las muestras simuladas y realizar el tratamiento pertinente. El único problema hasta aquí es que realmente no era posible gestionar toda la información, si no más bien, casi toda la información.
+Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder comenzar a trabajar y sentar las bases de un proyecto mucho mayor. Este proyecto además podía funcionar correctamente con diversos chips de Texas Instruments,concretamente nosotros escogimos el ADS1198. Este dispositivo electrónico es el encargado de realizar el muestreo y de realizar las conversiones con un \ac{ADC}. El código proporcionado era relativamente sencillo y fácil de entender. Se trataba de un programa realizado en C capaz de leer en espacio de usuario del dispositivo (en nuestro caso la BBB). Es decir, era capaz de recibir y tratar toda la información recibida de forma continua por el ADS1198. Hasta aquí todo es relativamente sencillo, gracias al módulo del kernel (para la comunicación SPI) del Debian de la BBB y al programa de usuario en C era posible gestionar casi toda la información recibida de las muestras simuladas y realizar el tratamiento pertinente.
 
 
 
@@ -39,6 +39,23 @@ Inicialmente, Joaquín nos proporcionó un pequeño proyecto sobre el que poder com
 \label{cap3:subsec:objetivos}
 
 En ciertos contextos, la pérdida de cierto número de muestras puede ser despreciable y no requerir mayor atención. Sin embargo, en este contexto concreto, al tratarse de procesamiento de señales en tiempo real, la pérdida de un cierto número de muestras, por pequeña que sea, puede ser decisiva a la hora de interpretar la información. El programa inicial escrito en C registraba una pérdida de muestras, que se podía determinar fácilmente hallando la diferencia entre el número de muestras generadas y el número de muestras leidas en el espacio de usuario. 
+
+\figura{Vectorial/perdida1}{width=1\textwidth}{fig:perdida1}%
+{Detección de pérdida de una muestra a través del software de Saleae}
+
+En la [Fig \ref{fig:perdida1}] se puede apreciar perfectamente, gracias al software proporcionado por Saleae, la pérdida de una muestra completa. En la figura se muestran las cuatro señales características del protocolo SPI, ya nombradas en la sección \ref{cap2:subsec:bus}. Además de esas cuatro señales, se puede apreciar otra más, (que es la que aparece primero en la figura) denominada DRDY (Data Ready). El flanco de subida de esta señal indica que el ADS tiene una muestra preparada para ser tratada. Se puede apreciar perfectamente en la figura que la señal deja de ser procesada aproximadamente hacia la mitad de la duración del primer ciclo, e incluso, que la muestra inmediatamente posterior es perdida; tras el siguiente flanco de subida del DRDY ,hay inmediatamente un flanco de bajada; la muestra se ha perdido por completo. Es una forma muy visual de ilustrar al lector, de las consecuencias de trabajar con un sistema operativo que puede quitarle a un proceso la CPU (aunque sea por pequeños instantes de tiempo) en el momento que crea oportuno. En este caso concreto, la perdida de la CPU por parte del proceso, aunque sea durante in intervalo de tiempo muy recudido, conlleva la pérdida de muestras. 
+
+
+\figura{Vectorial/perdida2}{width=1\textwidth}{fig:perdida2}%
+{Pérdida de tiempo producida por pérdida de control sobre la CPU}
+
+En la [Fig \ref{fig:perdida2}] se ilustra aun con más detalle la pérdida de tiempo que produce para el proceso la interrupción de uso de la CPU por parte del sistema operativo. Concretamente se remarca en la figura el tiempo transcurrido entre el flanco de bajada de la señal DRDY hasta el flanco de subida de la misma señal. 
+
+\figura{Vectorial/perdida3}{width=1\textwidth}{fig:perdida3}%
+{Pérdida de otra muestra reflejado por el software de Saleae}
+
+Y algo muy similar a las anteriores pérdidas se refleja perfectamente en la [Fig \ref{fig:perdida3}]. Las pérdidas de muestras reflejan un problema significativo en el programa original.
+
 
 El conjunto total de muestras que se perdía durante la transmisión de información era variable según distintas condiciones y factores externos que influyesen en el momento de la recopilación de información. Generalmente, si únicamente se ejecutaba el programa de usuario sin tener otras aplicaciones que consumiesen muchos recursos tanto de memoria como de cálculo computacional  en la BBB, la suma total de muestras perdidas podía encontrarse entre el 1 y el 2\% del total de muestras generadas. Sin embargo, si mientras se ejecutaba el programa en C, se ejecutaba algún otro programa que necesitase algún tipo de recurso para ser ejecutado, el número de muestras perdidas por la lectura en espacio de usuario podía dispararse. 
 
@@ -56,7 +73,10 @@ Sabiendo que el sistema operativo no tenia por qué garantizarnos la CPU para el 
 
 Teniendo en mente el problema anteriormente nombrado, era momento de buscar alternativas para solventarlo. La solución más inmediata que pasó por nuestra cabeza, fue la de sustituir la distribución Debian que utilizabamos en la BBB por una distribución que estuviese pensada para trabajar con análisis y tratamientos de datos en tiempo real. De esta forma, el sistema operativo no interrumpiría el proceso de análisis de muestras otorgando la CPU a otras tareas, y por consiguiente, presumiblemente no se produciría la pérdida de ninguna muestra. Sin embargo está solución parecía poco sostenible, ya que el hecho de recurrir a una distribución tan específica podría no ser accesible para todo tipo de usuarios y dispositivos, sin olvidar la dependencia que se generaría hacia ese sistema operativo concreto, impidiendo con la más absoluta de las certezas que funcionase éxitosamente en otros tipo de sistemas operativos (ya que por decirlo de algún modo, sería como un traje a medida). Sin embargo, si se utilizase una distribución genérica, como el Debian que usabamos en aquel momento, no habría problemas, ya que se trata de una distribución de proposito general a la que cualquier usuario podría recurrir de manera relativamente sencilla.
 
-Una vez estabamos decididos a mantener el sistema operativo, la solución tenía que encontrarse explorando otras posibles vías. Fue entonces, cuando se nos presentó la posibilidad de usar dos microprocesadores que tenía la BBB, cada uno denominado \ac{PRU}. Estos dos microprocesadores con los que contábamos, podían ser programados específicamente para tratar procesos de análisis y recopilación de muestras en tiempo real. De esta forma, aunque el sistema operativo decidiese ceder el uso de la CPU a otro proceso, las PRUs podrían seguir tratando los procesos en tiempo real en segundo plano, sin necesidad de requerir la CPU principal, por lo que la pérdida de muestras se reduciría totalmente gracias a estos pequeños procesadores que incorpora la placa. Se trata de dos procesadores de alta frecuencia (200-MHz) de arquitectura de 32 bits que ofrecen la posibilidad a los desarrolladores de tratar con operaciones en tiempo real.
+Una vez estabamos decididos a mantener el sistema operativo, la solución tenía que encontrarse explorando otras posibles vías. Fue entonces, cuando se nos presentó la posibilidad de usar dos microprocesadores que tenía la BBB, cada uno denominado \ac{PRU}. Estos dos microprocesadores con los que contábamos, podían ser programados específicamente para tratar procesos de análisis y recopilación de muestras en tiempo real. De esta forma, aunque el sistema operativo decidiese ceder el uso de la CPU a otro proceso, las PRUs podrían seguir atendiendo los procesos en tiempo real, sin necesidad de requerir la CPU principal, por lo que la pérdida de muestras se reduciría totalmente gracias a estos pequeños procesadores que incorpora la placa. Se trata de dos procesadores de alta frecuencia (200MHz) de arquitectura de 32 bits que ofrecen la posibilidad a los desarrolladores de tratar con operaciones en tiempo real. En la [Fig \ref{fig:prus}] se puede apreciar un esquema hardware, que muestra la interaccioón de estos microprocesadores con el resto del dispositivo.
+
+\figura{Vectorial/prus}{width=1\textwidth}{fig:prus}%
+{Esquema hardware del PRU de la BBB}
 
 A continuación se enumeran los motivos por los que escogimos recurrir a las PRUs:
 
@@ -91,7 +111,7 @@ Cuando comenzó el desarrollo de este proyecto, existían dos posibles alternativa
    \end{itemize}
 \end{itemize}
 
-Ante las alternativas que se nos plantearon, la decisión final fue la de programar en ensamblador, concretamente en pasm, ya que resultó ser una de las opciones más interesantes para este proyecto (aunque somos conscientes de que en la actualidad no es frecuente encontrarse con una situación en la que se requiera programar en ensamblador). Se optó por esta descisión de diseño, ya que investigar cual de las posibilidades era la que más flexibilidad podía aportar al contexto en el que se situaba el proyecto, pasm resultó aportar un mayor control y una valiosa posibilidad de optimizar el código final.
+Ante las alternativas que se nos plantearon, la decisión final fue la de programar en ensamblador, concretamente en pasm, ya que resultó ser una de las opciones más interesantes para este proyecto (aunque somos conscientes de que en la actualidad no es frecuente encontrarse con una situación en la que se requiera programar en ensamblador). Se optó por esta descisión de diseño, ya que el PRU tarda un tiempo fijo por instrucción (5 nanosegundos), y si se usase un código de alto nivel como C, se perdería un control tan fino de la temporización como el que aporta el lenguaje ensamblador.
 
 %-------------------------------------------------------------------
 \section{Configuración hardware}
@@ -103,12 +123,12 @@ Tal y como indicabamos en la sección \ref{cap2:subsec:bbb}, la BBB es un disposi
 \figura{Vectorial/pins}{width=1\textwidth}{fig:pins}%
 {Diagrama de conexiones físicas disponibles en una BBB}
 
-Cada uno de los pines físicos que incorpora la placa tiene una función determinada como puede apreciarse en la [Fig \ref{fig:pins}]. La BBB dispone de dos cabeceras completas (conocidas como P8 y P9) con multitud de pines disponibles, que permiten realizar conexiones físicas mediante cableado. La leyenda de la [Fig \ref{fig:pins}] muestra las funciones, o mejor dicho, las posibles funciones de los distintos pines:
+Cada uno de los pines físicos que incorpora la placa tiene una función determinada, en la [Fig \ref{fig:pins}] puede apreciarse alguna de las funcionalidades que podría tener cada uno de los pines\footnote{En la [Fig \ref{fig:pins}] solo se ilustran algunas de las posibilidades que ofrece cada pin; todas las funcionalidades de cada uno de los pines se pueden consultar en \href{http://elinux.org/Beagleboard:Cape\_Expansion\_Headers}{http://elinux.org/Beagleboard:Cape\_Expansion\_Headers}}. La BBB dispone de dos cabeceras completas (conocidas como P8 y P9) con multitud de pines disponibles, que permiten realizar conexiones físicas mediante cableado. La leyenda de la [Fig \ref{fig:pins}] muestra las funciones, o mejor dicho, las posibles funciones de los distintos pines:
 
 \begin{itemize}
 \item Para empezar, se han destacado en color rojo los pines de 5, 3 y 1.8 \textit{Voltios}, así como los pines de tierra (DGND). Hay que tener en cuenta que VDD\_ ADC es un pin de 1.8 \textit{V} que se usa para proporcionar una referencia para las funciones de lectura analógica.
 \item Los pines \ac{GPIO} están destacados en color verde. Cabe destacar que algunos  de estos pines se pueden usar para comunicación serie (UART) \footnote{\label{note1}Más información sobre UART e I2C disponible en \href{https://geekytheory.com/puertos-y-buses-1-i2c-y-uart}{https://geekytheory.com/puertos-y-buses-1-i2c-y-uart}}.
-\item Si se desea simular una salida analógica comprendida entre 0 y 3.3 \textit{V}, se pueden usar los pines PWM destacados en morado. 
+\item Si se desea simular una salida digital comprendida entre 0 y 3.3 \textit{V}, se pueden usar los pines PWM destacados en morado. 
 \item Los pines destacados en color azul pueden ser utilizados como entradas analógicas \footnote{Estas entradas analógicas toleran voltajes comprendidos entre los 0 y los 1.8 \textit{Voltios}, no soportan voltajes superiores a los 1.8 \textit{V}}. 
 \item Los pines en color naranja clarito pueden ser usados para I2C \textsuperscript{\ref{note1}}.
 \item Los pines destacados en color naranja oscuro son fundamentalmente usados para aplicaciones de pantalla \ac{LCD}.
@@ -125,7 +145,7 @@ Un \ac{DT} es una descripción del hardware de un sistema. Debería incorporar el 
 \figura{Vectorial/dt}{width=1\textwidth}{fig:dt}%
 {Ejemplo simple de un fichero \texttt{.dts}}
 
-Un DT representa la configuración hardware como si de una jerarquía de nodos se tratase. Cada nodo puede contener propiedades y subnodos. Las propiedades se denominan arrays de bytes, los cuales pueden contener strings, numeros (big-endian), secuencias arbitrarias de bytes, y cualquier combinación de estos. Por analogia con un sistema de ficheros, los nodos son directorios, y las propiedades son ficheros. 
+Un DT representa la configuración hardware como si de una jerarquía de nodos se tratase. Cada nodo puede contener propiedades y subnodos. Las propiedades se denominan arrays de bytes, los cuales pueden contener strings, números (big-endian), secuencias arbitrarias de bytes, y cualquier combinación de estos. Para intentar clarificar un concepto tan abstracto, trataremos de realizar una analogía con un ejemplo del mundo real; un DT podría visualizarse como un sistema de ficheros cualquiera, en el que los nodos serían los directorios, y las propiedades serían los ficheros.
 
 Los DT generalmente se encuentran en un formato textual conocido como Device Tree Source (DTS) y son almacenados en ficheros con extensión \texttt{.dts}. La sintaxis DTS es como la de C, con llaves para agrupar código y punto y coma para concluir cada línea. En la [Fig \ref{fig:dt}] puede apreciarse un ejemplo muy simple de este tipo de ficheros.
 
@@ -136,7 +156,7 @@ Cabe destacar que los DTS requieren de punto y coma tras el cierre de una llave.
 %-------------------------------------------------------------------
 \label{cap3:subsec:dto}
 
-Un SoC (System-on-Chip moderno) moderno es un dispositivo muy complejo; un DT completo podría suponer cientos de líneas de código. Situar un SoC en una placa junto a otros componentes solo hace que las cosas sean aun más complejas. Para que sea relativamente manejable, especialmente si hay dispositivos relaciones que comparten componentes, tiene sentido diferenciar los elementos comunes en ficheros con extensión \texttt{.dtsi}, para que sean incluidos desde los ficheros \texttt{.dts} que los requiriesen.
+Un SoC (System-on-Chip) moderno es un dispositivo muy complejo; un DT completo podría suponer cientos de líneas de código. Situar un SoC en una placa junto a otros componentes solo hace que las cosas sean aun más complejas. Para que sea relativamente manejable, especialmente si hay dispositivos relaciones que comparten componentes, tiene sentido diferenciar los elementos comunes en ficheros con extensión \texttt{.dtsi}, para que sean incluidos desde los ficheros \texttt{.dts} que los requiriesen.
 
 Pero cuando una placa como la BBB es compatible con accesorios expandibles, el problema puede ser aun más complejo. En última instancia, cada configuración posible requiere un DT para ser descrita, pero una vez que se tenga en cuenta el hardware de base y las expansiones que requieren el uso de unos pines GPIO determinados que pueden ser compartidos por otras configuraciones diferentes, el número de combinaciones posibles comienza a multiplicarse rápidamente.
 
@@ -169,7 +189,7 @@ Una vez diseñada la configuración hardware, era momento de realizar las conexcio
 
 \begin{table}[]
 \centering
-\caption{Conexiones físicas necesarias para la alimentación del chip ADS1198}
+\caption{Conexiones físicas necesarias para la alimentación del ADS1198}
 \label{tabla1}
 \begin{tabular}{|c|c|c|}
 \hline
@@ -244,7 +264,7 @@ El software más destacado que se ejecuta en la BBB es el siguiente:
 \begin{itemize}
 \item Programa principal desarrollado en C que se ejecuta en espacio de usuario denominado \texttt{medcape.c}.
 \item Programa desarrollado en código ensamblador, del que se hablará con más detenimiento más adelante denominado \texttt{PRUADC.p}.
-\item Programa desarrollado en C, denominado \texttt{mem2file.c} y encargado de la escritura de datos de memoria a un fichero externo.
+\item Fichero que forma parte de \texttt{medcape.c}, también desarrollado en C, denominado \texttt{mem2file.c} y encargado de la escritura de datos de memoria a un fichero externo.
 \item Programa muy sencillo desarrollado en Python, y denominado \texttt{BTConnection.py} y encargado de la recepción y envio de información a otros dispositivos.
 \end{itemize}
 
@@ -299,19 +319,9 @@ La comunicación SPI funciona tal y como se explica en la sección \ref{cap2:subse
 \figura{Vectorial/spiens}{width=1\textwidth}{fig:spiens}%
 {Comunicación SPI en código ensamblador}
 
-Cabe destacar que cada registro en ensamblador tiene una capacidad de 4 bytes. Debido al tamaño de cada muestra que se recoge, es necesario almacenar esta información en 7 registros. En la función SPICLK\_LOOP se utilizan los registros r16 como contador para saber cuantos bits se han recibido, y r20 como registro auxiliar. Considerando que el tamaño de cada muestra es de 18 bytes, cada una es almacenada de la siguiente forma:
+Cabe destacar que cada registro en ensamblador tiene una capacidad de 4 bytes. Debido al tamaño de cada muestra que se recoge, es necesario almacenar esta información en 7 registros. 
 
-\begin{itemize}
-\item \textbf{Registro r3}: Primer registro (3 bytes)
-\item \textbf{Registro r17}: Segundo registro (3 bytes)
-\item \textbf{Registro r18}: Tercer registro (3 bytes)
-\item \textbf{Registro r19}: Cuarto registro (3 bytes)
-\item \textbf{Registro r20}: Quinto registro (3 bytes)
-\item \textbf{Registro r23}: Sexto registro (3 bytes)
-\item \textbf{Registro r27}: Séptimo registro (3 bytes)
-\end{itemize}
-
-Esta información se refleja en forma de código en las figuras [Fig \ref{fig:loop1}] y [Fig \ref{fig:loop2}]. En estas figuras se muestra el código de la función SPICLK\_LOOP escrito en código ensamblador, en la cual se refleja el proceso de iteración sobre cada uno de los bits concretos, así como el uso de todos los registros anteriormente descritos.
+Esta información se refleja en forma de código en las figuras [Fig \ref{fig:loop1}] y [Fig \ref{fig:loop2}]. En estas figuras se muestra el código de la función SPICLK\_LOOP escrito en código ensamblador, en la cual se refleja el proceso de iteración sobre cada uno de los bits concretos, así como el uso de todos los registros anteriormente nombrados.
 
 \clearpage
 
@@ -352,7 +362,12 @@ Todo este proceso se refleja en el código ensamblador, concretamente en la funci
 %-------------------------------------------------------------------
 \label{cap3:sec:lectura}
 
-Como ya se adelantaba en la sección \ref{cap3:sec:guardado}, se ha desarrollado un programa en C encargado de leer la información de las muestras almacenadas en el banco de memoria del PRU, para posteriormente guardarla en un fichero (con extensión \texttt{.data}) \footnote{Este fichero binario está limitado por software a un tamaño máximo de 50MB}. Este programa en C está desarrollado a raíz de un ejemplo que se muestra en el cápitulo 13 del libro Exploring BeagleBone \citep{exploringBBB} y tanto ampliado como adaptado para su correcto funcionamiento en el presente proyecto.
+\figura{Vectorial/octave}{width=1\textwidth}{fig:octave}%
+{Representación de la traza del fichero binario en Octave}
+
+Como ya se adelantaba en la sección \ref{cap3:sec:guardado}, se ha desarrollado un programa en C encargado de leer la información de las muestras almacenadas en el banco de memoria del PRU, para posteriormente guardarla en un fichero (se trata de un archivo binario) \footnote{Este fichero binario está limitado por software a un tamaño máximo de 50MB}. La traza del archivo binario puede ser representada mediante ciertos programas como Matlabs u Octave. La [Fig \ref{fig:octave}] muestra la representación de este binario mediante el programa de escritorio Octave (versión para linux).
+
+El programa en C está desarrollado a raíz de un ejemplo que se muestra en el cápitulo 13 del libro Exploring BeagleBone \citep{exploringBBB} y tanto ampliado como adaptado para su correcto funcionamiento en el presente proyecto.
 
 Inicialmente, este programa crea el fichero en el que se guardarán los datos de las muestras. Accede al espacio de memoria del banco del PRU en la que se almacenan las muestras \footnote{Las muestras se almacenan por grupos de 100}. Es necesario asegurar que cada grupo de muestras contiene la información correcta y precisa, y para ello tras cada grupo de muestras se escriben dos bytes concretos, como si de un sello se tratase a modo de asegurar que los datos recibidos no sean corruptos o haya pérdidas. Concretamente tras el espacio exacto que requiere un grupo de muestras, se escriben a continuación los bytes \texttt{FF}.
 
